ClrContourCache for SwAnchoredDrawObjects (fdo#45376)

call it only for contour wrapped drawing objects

Signed-off-by: Petr Mladek <pmladek@suse.cz>