sw/source/core/layout/pagechg.cxx
@@ -39,6 +39,7 @@
 #include <fmtfordr.hxx>
 #include <fmtfld.hxx>
 #include <fmtornt.hxx>
+#include <fmtsrnd.hxx>
 #include <ftninfo.hxx>
 #include <tgrditem.hxx>
 #include <viewopt.hxx>
@@ -2035,6 +2036,10 @@ void lcl_MoveAllLowerObjs( SwFrm* pFrm, const Point& rOffset )
             const Point aNewAnchorPos( ( aCurrAnchorPos + rOffset ) );
             pAnchoredDrawObj->DrawObj()->SetAnchorPos( aNewAnchorPos );
             pAnchoredDrawObj->SetLastObjRect( pAnchoredDrawObj->GetObjRect().SVRect() );
+
+            // clear contour cache
+            if ( pAnchoredDrawObj->GetFrmFmt().GetSurround().IsContour() )
+                ClrContourCache( pAnchoredDrawObj->GetDrawObj() );
         }
         // #i92511#
         // cache for object rectangle inclusive spaces has to be invalidated.
